# sitters

./: .gitignore  README.md  pyproject.toml
sitters/: __init__.py  context.py  sit.py  sitter.py  states.py  supervisor.py
tests/: test_caching.py  test_context.py  test_functions.py  test_hooks.py  test_retries.py  test_signals.py  test_states.py  test_timeouts.py
