[tool.poetry]
name = "sitters"
version = "0.1.0"
description = ""
authors = ["Uriel Mandujano <5422638+konkolorado@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tenacity = "^8.2.3"
cachetools = "^5.3.2"
anyio = "^4.2.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.11"
pytest = "^8.0.0"
ipython = "^8.20.0"
pytest-asyncio = "^0.24.0"

[tool.poetry.group.server.dependencies]
#arrow = "^1.3.0"
#sqlalchemy = "^2.0.25"
#sqlalchemy-utils = "^0.41.1"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
addopts = "-ra"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
